<resources>
    <string name="app_name">AndroidLab2</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="clearData">Clear Data</string>
    <string name="font_title">Font</string>
    <string name="theme_title">Theme</string>
    <string name="lang_title">Language</string>
    <string name="title_activity_settings">Settings Activity</string>
    <string name="sets">sets</string>
    <string name="setPause">Pause</string>
    <string name="save">Save</string>
    <string name="cycles">Cycles</string>
    <string name="work">Work</string>
    <string name="prepare">Prepare</string>
    <string name="trainingTitle">Training</string>
    <string name="title">Title</string>
    <string name="color">Color</string>
    <string name="pause">Pause</string>
    <string name="end">End</string>
    <string name="go">Go</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>