<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activity.NewExerciseActivity">
    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".AddActivity">

            <TextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/title" />

            <EditText
                android:id="@+id/newTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:text="@string/trainingTitle" />

            <TextView
                android:id="@+id/Prepare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/prepare" />

            <EditText
                android:id="@+id/newPrepare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/Work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/work" />

            <EditText
                android:id="@+id/newWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/Chill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/pause" />

            <EditText
                android:id="@+id/newChill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/Cycles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/cycles" />

            <EditText
                android:id="@+id/newCycles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/Sets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/sets" />

            <EditText
                android:id="@+id/newSets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/SetChill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/setPause" />

            <EditText
                android:id="@+id/newSetChill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />

            <Button
                android:id="@+id/btnColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="50dp"
                android:text="@string/save" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>